Fix #1067: Add source and do fallback for string translation
