# api/v2/swagger/swagger.yaml
@@ -12,6 +12,7 @@ definitions:
         type: object
       response:
         $ref: '#/definitions/api.BusinessError'
+        type: object
     type: object
   combine.translationWithPatternPostReq:
     properties:
@@ -41,8 +42,6 @@ definitions:
     - scope
     - version
     type: object
-  jsoniter.Any:
-    type: object
   translation.BundleData:
     properties:
       component:
@@ -50,7 +49,7 @@ definitions:
       locale:
         type: string
       messages:
-        $ref: '#/definitions/jsoniter.Any'
+        type: string
     required:
     - component
     - locale
@@ -82,6 +81,7 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/translation.UpdateBundle'
+        type: object
       requester:
         type: string
     required:
@@ -674,6 +674,10 @@ paths:
         in: path
         name: key
         required: true
+        type: string
+      - description: a source string
+        in: query
+        name: source
         type: string
       produces:
       - application/json
