# api/v2/translation/handler_trans.go
@@ -154,6 +154,7 @@ func GetBundle(c *gin.Context) {
 // @Param locale path string true "locale name"
 // @Param component path string true "component name"
 // @Param key path string true "key"
+// @Param source query string false "a source string"
 // @Success 200 {object} api.Response "OK"
 // @Failure 400 {string} string "Bad Request"
 // @Failure 404 {string} string "Not Found"
@@ -161,15 +162,21 @@ func GetBundle(c *gin.Context) {
 // @Router /translation/products/{productName}/versions/{version}/locales/{locale}/components/{component}/keys/{key} [get]
 // @Deprecated
 func GetString(c *gin.Context) {
-	id := MessageID{}
-	if err := c.ShouldBindUri(&id); err != nil {
+	req := GetStringReq{}
+	if err := c.ShouldBindUri(&req); err != nil {
 		api.AbortWithError(c, sgtnerror.StatusBadRequest.WithUserMessage(api.ExtractErrorMsg(err)))
 		return
 	}
+	if err := c.ShouldBindQuery(&req); err != nil {
+		api.AbortWithError(c, sgtnerror.StatusBadRequest.WithUserMessage(api.ExtractErrorMsg(err)))
+		return
+	}
+
 	version := c.GetString(api.SgtnVersionKey)
 
-	msg, err := l3Service.GetString(logger.NewContext(c, c.MustGet(api.LoggerKey)), id.ProductName, version, id.Locale, id.Component, id.Key)
-	api.HandleResponse(c, msg, err)
+	internalID := translation.MessageID{Name: req.ProductName, Version: version, Locale: req.Locale, Component: req.Component, Key: req.Key}
+	result, err := l3Service.GetStringWithSource(logger.NewContext(c, c.MustGet(api.LoggerKey)), &internalID, req.Source)
+	api.HandleResponse(c, result, err)
 }
 
 // PutBundles godoc
